--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -12,7 +12,7 @@
    <ul>
       <li><a href="../index.html">Главная</a></li>
       <li><a href="./catalog.html">Каталог</a></li>
-      <li><a href="./req.html">Контакты</a></li>
+      <li><a href="#">Контакты</a></li>
    </ul>
    <h1>Каталог</h1>
    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nesciunt amet est libero corrupti omnis veniam
