--- a/catalog/catalog.html
+++ b/catalog/catalog.html
@@ -6,16 +6,18 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Главная</title>
+   <link rel="stylesheet" href="../style.css">
 </head>
 
 <body>
    <ul>
-      <li><a href="../index.html">Главная</a></li>
-      <li><a href="./catalog.html">Каталог</a></li>
-      <li><a href="#">Контакты</a></li>
+      <li><a class="nav__link" href="../index.html">Главная</a></li>
+      <li><a class="nav__link" href="./catalog.html">Каталог</a></li>
+      <li><a class="nav__link" href="#">Контакты</a></li>
    </ul>
-   <h1>Каталог</h1>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nesciunt amet est libero corrupti omnis veniam
+   <h1 class="title">Каталог</h1>
+   <p class="text__block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eveniet nesciunt amet est libero
+      corrupti omnis veniam
       laudantium odit quaerat a, aliquid enim illo quam fugiat debitis similique, quod eos facere cum dolorem quibusdam,
       minima ratione sed. Aliquam voluptates est tempore excepturi! Eligendi sed similique hic maiores ex earum fugiat,
       quasi, modi nulla voluptates temporibus, inventore impedit beatae placeat. Veritatis facilis, veniam distinctio
@@ -28,18 +30,21 @@
 
    <img src="./../img/pack-01.jpg" alt="pack-01" width="300">
    <h3>Первый товар</h3>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa obcaecati nihil omnis deserunt illo voluptate
+   <p class="text__block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa obcaecati nihil omnis deserunt
+      illo voluptate
       debitis eligendi reiciendis cumque neque aspernatur animi quae veniam ad, similique ipsa at dolorem asperiores
       possimus veritatis voluptatibus ullam recusandae. Magnam nisi necessitatibus harum illo corrupti neque. Nostrum,
       fugiat veritatis?</p>
    <img src="./../img/pack-02.jpg" alt="pack-02" width="300">
    <h3>Второй товар</h3>
-   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos amet doloremque, sed autem quae perferendis placeat
+   <p class="text__block">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quos amet doloremque, sed autem quae
+      perferendis placeat
       vitae debitis excepturi at qui ut provident incidunt officia architecto accusamus, rem illum suscipit asperiores
       expedita ducimus esse quibusdam molestiae. A, maiores.</p>
    <img src="./../img/pack-03.jpg" alt="pack-03" width="300">
    <h3>Третий товар</h3>
-   <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas odit placeat amet, tenetur aspernatur neque
+   <p class="text__block">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptas odit placeat amet, tenetur
+      aspernatur neque
       pariatur error laboriosam rem delectus numquam provident repellat inventore doloremque. Deserunt autem blanditiis
       consequatur earum sed recusandae error vero tempora aspernatur dolorum enim saepe, obcaecati minima veniam quasi,
       placeat incidunt ratione aliquid libero. Dolores, non? Suscipit, a? Cumque doloribus corrupti, commodi maiores
