--- a/index.html
+++ b/index.html
@@ -6,23 +6,28 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Главная</title>
+   <link rel="stylesheet" href="./style.css">
 </head>
 
 <body>
    <ul>
-      <li><a href="./index.html">Главная</a></li>
-      <li><a href="./catalog/catalog.html">Каталог</a></li>
-      <li><a href="#">Контакты</a></li>
+      <li><a class="nav__link" href="./index.html">Главная</a></li>
+      <li><a class="nav__link" href="./catalog/catalog.html">Каталог</a></li>
+      <li><a class="nav__link" href="#">Контакты</a></li>
    </ul>
-   <h1>Главная страница</h1>
-   <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, quidem! Eum, ex voluptate doloribus provident aut
+   <h1 class="title">Главная страница</h1>
+   <p class="text__block">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, quidem! Eum, ex voluptate
+      doloribus provident aut
       recusandae non amet obcaecati debitis error nam at suscipit reiciendis facere laborum id quibusdam.</p>
-   <h2>Добро пожаловать на сайт</h2>
-   <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure impedit amet aut repudiandae quam doloremque omnis
+   <h2 class="sub__title">Добро пожаловать на сайт</h2>
+   <p class="text__block">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Iure impedit amet aut repudiandae
+      quam doloremque omnis
       sequi nulla blanditiis architecto? Autem ipsa nemo facilis et a quae aperiam consectetur reprehenderit.</p>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi aliquid! Eum expedita, commodi
+   <p class="text__block">Lorem ipsum dolor sit amet consectetur adipisicing elit. Cupiditate, excepturi aliquid! Eum
+      expedita, commodi
       quasi eos nemo vitae inventore magnam numquam, libero minima nostrum at ab minus magni, neque saepe.</p>
-   <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas distinctio facilis dolores aut modi tempore
+   <p class="text__block">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas distinctio facilis dolores
+      aut modi tempore
       veniam quaerat itaque laudantium! Esse in quo optio quam aut quae fugit rerum accusamus cumque?</p>
 </body>
 
