--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 
 <body>
    <ul>
-      <li><a class="nav__link" href="./index.html">Главная</a></li>
-      <li><a class="nav__link" href="./catalog/catalog.html">Каталог</a></li>
-      <li><a class="nav__link" href="#">Контакты</a></li>
+      <a class="nav__link" href="./index.html">Главная</a>
+      <a class="nav__link" href="./catalog/catalog.html">Каталог</a>
+      <a class="nav__link" href="#">Контакты</a>
    </ul>
    <h1 class="title">Главная страница</h1>
    <p class="text__block">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Id, quidem! Eum, ex voluptate
