--- a/index.html
+++ b/index.html
@@ -5,50 +5,56 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Seminar03</title>
+   <title>Seminar03_duble</title>
    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
    <div class="top">
+
       <div class="header">
-         <a href="#" class="header__link">Home</a>
-         <a href="#" class="header__link">About</a>
-         <a href="#" class="header__link">Services</a>
-         <a href="#" class="header__link">Blog</a>
-         <a href="#" class="header__link">Contact</a>
+         <img class="header_logo" src="./img/header_logo.svg" alt="Header Logo">
+         <div class="header__nav">
+            <a href="#" class="header__link">Home</a>
+            <a href="#" class="header__link">About Us</a>
+            <a href="#" class="header__link">Services</a>
+            <a href="#" class="header__link">Features</a>
+            <a href="#" class="header__link">Team</a>
+            <a href="#" class="header__link">Blog</a>
+            <a href="#" class="header__link">Contact</a>
+
+         </div>
       </div>
 
       <div class="top__content">
          <div class="top__info">
-            <h2 class="top__subtitle">Next genaretion platform</h2>
-            <h1 class="top__title">Artificial intelligence & Syber security</h1>
+            <h1 class="top__title">
+               SEO & Digital
+               Marketing For Your
+               Website.
+            </h1>
             <p class="top__text">
-               Lorem ipsum is placeholder text commonly used in the graphic, print, and publishing industries for
-               previewing layouts
-               and visual mockups.
+               Provide all kind of seo services and help to improve
+               seo ranking. Globally incubate standards.
             </p>
-         </div>
 
-         <div class="top__buttons">
-            <button class="top__btn">Get started</button>
-            <!-- <button class="top__btn"><img src="./img/arrow.svg" alt=""> Watch video</button> -->
-            <button class="top__btn">
-               <svg width="20" height="25" viewBox="0 0 20 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-                  <path d="M20 12.5L0.500001 24.1913L0.500002 0.808657L20 12.5Z" fill="white" />
-               </svg>
-               Watch video</button>
+            <div class="top__buttons">
+               <button class="top__start">Start Now</button>
+               <button class="top__start">Watch Video</button>
+            </div>
          </div>
-         <img src="./img/rocket.svg" alt="Rocket">
+         <img class="top__image" src="./img/top_image.png" alt="Top Image">
       </div>
-
 
       <div class="top__logos">
-         <img src="./img/top__logo-1.svg" alt="Logo 1">
-         <img src="./img/top__logo-2.svg" alt="Logo 2">
-         <img src="./img/top__logo-3.svg" alt="Logo 3">
-         <img src="./img/top__logo-4.svg" alt="Logo 4">
+         <a href="#" class="top__logo"><img src="./img/top__logo1.svg" alt="Logo-1"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo2.svg" alt="Logo-2"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo3.svg" alt="Logo-3"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo4.svg" alt="Logo-4"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo5.svg" alt="Logo-5"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo6.svg" alt="Logo-6"></a>
       </div>
+
    </div>
 </body>
 
