Added HomeWork of the lesson08

--- a/index.html
+++ b/index.html
@@ -39,20 +39,20 @@
             </p>
 
             <div class="top__buttons">
-               <button class="top__start">Start Now</button>
-               <button class="top__start">Watch Video</button>
+               <button class="top__btn-start btn">Start Now</button>
+               <button class="top__btn-watch btn">Watch Video</button>
             </div>
          </div>
          <img class="top__image" src="./img/top_image.png" alt="Top Image">
       </div>
 
       <div class="top__logos">
-         <a href="#" class="top__logo"><img src="./img/top__logo1.svg" alt="Logo-1"></a>
-         <a href="#" class="top__logo"><img src="./img/top__logo2.svg" alt="Logo-2"></a>
-         <a href="#" class="top__logo"><img src="./img/top__logo3.svg" alt="Logo-3"></a>
-         <a href="#" class="top__logo"><img src="./img/top__logo4.svg" alt="Logo-4"></a>
-         <a href="#" class="top__logo"><img src="./img/top__logo5.svg" alt="Logo-5"></a>
-         <a href="#" class="top__logo"><img src="./img/top__logo6.svg" alt="Logo-6"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo1-.png" alt="Logo-1"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo2.png" alt="Logo-2"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo3.png" alt="Logo-3"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo4.png" alt="Logo-4"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo5.png" alt="Logo-5"></a>
+         <a href="#" class="top__logo"><img src="./img/top__logo6.png" alt="Logo-6"></a>
       </div>
 
    </div>
