Added HomeWork of the Seminar09 and ClassWork of the Seminar08

--- a/Seminar03/index.html
+++ b/Seminar03/index.html
@@ -50,6 +50,75 @@
          <img src="./img/top__logo-4.svg" alt="Logo 4">
       </div>
    </div>
+
+
+   <div class="grid__block">
+
+      <div class="item">
+         <img src="./img/gb__img1.svg" alt="item-1" class="item__img">
+         <div class="item__header">Expert Prespective Agency Awards</div>
+         <div class="item__text">
+            Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and
+            visual
+            mockups.
+         </div>
+      </div>
+
+      <div class="item">
+         <img src="./img/gb__img2.svg" alt="item-2" class="item__img">
+         <div class="item__header">Business Prespective Global Agency Awards</div>
+         <div class="item__text">
+            Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and
+            visual
+            mockups.
+         </div>
+      </div>
+
+      <div class="item">
+         <img src="./img/gb__img3-5-6.svg" alt="item-3" class="item__img">
+         <div class="item__header">Value for Results in Global Agency Awards</div>
+         <div class="item__text">
+            Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and
+            visual
+            mockups.
+         </div>
+      </div>
+
+      <div class="item item-4big">
+         <img src="./img/gb__img4big.svg" alt="item-4big" class="item__img">
+         <div class="item__header">In print, and publishing industries for previewing layouts and visual mockups.</div>
+         <div class="item__text">
+            Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and
+            visual
+            mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing
+            layouts and
+            visual mockups. Lorem ipsum is placeholder text commonly used in print, and publishing industries for
+            previewing layouts
+            and visual mockups.
+         </div>
+      </div>
+
+      <div class="item">
+         <img src="./img/gb__img3-5-6.svg" alt="item-5" class="item__img">
+         <div class="item__header">Value for Results in Global Agency Awards</div>
+         <div class="item__text">
+            Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and
+            visual
+            mockups.
+         </div>
+      </div>
+
+      <div class="item">
+         <img src="./img/gb__img3-5-6.svg" alt="item-6" class="item__img">
+         <div class="item__header">Value for Results in Global Agency Awards</div>
+         <div class="item__text">
+            Lorem ipsum is placeholder text commonly used in print, and publishing industries for previewing layouts and
+            visual
+            mockups.
+         </div>
+      </div>
+
+   </div>
 </body>
 
 </html>
