--- a/index.html
+++ b/index.html
@@ -56,6 +56,89 @@
       </div>
 
    </div>
+
+   <div class="choose">
+
+      <div class="choose__leader">
+         <div class="leader__item">
+            <img src="./img/leader_icon-1.svg" class="leader__item_img" alt="">
+            <h2 class="leader__item_header">Grow Your Business</h2>
+            <p class="leader__item_text">
+               Leverage agile frameworks to provide a robust synopsis for high level
+               overviews.
+            </p>
+            <a href="#" class="leader__item_more">Read More...</a>
+         </div>
+
+         <div class="leader__item">
+            <img src="./img/leader_icon-2.svg" class="leader__item_img" alt="">
+            <h2 class="leader__item_header">Get Quality Ieads</h2>
+            <p class="leader__item_text">
+               Leverage agile frameworks to provide a robust synopsis for high level
+               overviews.
+            </p>
+            <a href="#" class="leader__item_more">Read More...</a>
+         </div>
+
+         <div class="leader__item">
+            <img src="./img/leader_icon-3.svg" class="leader__item_img" alt="">
+            <h2 class="leader__item_header">Drive More Sales</h2>
+            <p class="leader__item_text">
+               Leverage agile frameworks to provide a robust synopsis for high level
+               overviews.
+            </p>
+            <a href="#" class="leader__item_more">Read More...</a>
+         </div>
+      </div>
+
+      <h1 class="choose__title">
+         Why You Should Choose Us.
+      </h1>
+      <p class="choose__text">
+         Distinctively exploit optimal alignments for intuitive bandwidth. Quickly coordinate e-business
+         applications through revolutionary catalysts.
+      </p>
+
+      <div class="choose__main">
+
+         <div class="main__cards">
+
+            <div class="cards__item">
+               <img src="./img/cards__item_img-1.svg" alt="Card image 01" class="cards__item_img">
+               <h2 class="cards__item_header">Keyword Research</h2>
+               <p class="cards__item_text">
+                  Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.
+               </p>
+               <button class="btn cards__btn">Learn More <img src="./img/button__arrow.svg" alt="Button arrow"
+                     class="arrow__more"></button>
+            </div>
+
+            <div class="cards__item">
+               <img src="./img/cards__item_img-2.svg" alt="Card image 02" class="cards__item_img">
+               <h2 class="cards__item_header">Seo Optimazadion</h2>
+               <p class="cards__item_text">
+                  Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.
+               </p>
+               <button class="btn cards__btn">Learn More <img src="./img/button__arrow.svg" alt="Button arrow"
+                     class="arrow__more"></button>
+            </div>
+
+            <div class="cards__item">
+               <img src="./img/cards__item_img-3.svg" alt="Card image 03" class="cards__item_img">
+               <h2 class="cards__item_header">Social Marketing</h2>
+               <p class="cards__item_text">
+                  Business applications through revolutionary catalysts for chang the Seamlessly underwhelm dures.
+               </p>
+               <button class="btn cards__btn">Learn More <img src="./img/button__arrow.svg" alt="Button arrow"
+                     class="arrow__more"></button>
+            </div>
+
+         </div>
+
+      </div>
+
+   </div>
+
 </body>
 
 </html>
