Added snowflake block and corrected README.md file

--- a/Seminar14/cards.html
+++ b/Seminar14/cards.html
@@ -16,11 +16,18 @@
       <div class="board__item board__item-3"></div>
    </div>
 
-   <h2>Rotate</h2>
+   <h2>Rotate hexagon</h2>
    <div class="board board_rotate">
       <div class="board__item board__item_rotate-1"></div>
       <div class="board__item board__item_rotate-2"></div>
       <div class="board__item board__item_rotate-3"></div>
+   </div>
+
+   <h2>Rotate snowflake</h2>
+   <div class="board board_rotate">
+      <div class="board__item board__item_rotate-1 snow"></div>
+      <div class="board__item board__item_rotate-2 snow"></div>
+      <div class="board__item board__item_rotate-3 snow"></div>
    </div>
 </body>
 
